# free-note

android/RoomWordSample/: build.gradle
android/RoomWordSample/app/: build.gradle  build.gradle.kts
android/WaveMaker/: settings.gradle
android/WaveMaker/app/: build.gradle
android/WaveMaker/app/src/main/cpp/: CMakeLists.txt  jni-bridge.cpp
android/exoplayersample/: settings.gradle
android/exoplayersample/app/: build.gradle
c++/rootish-array-stack/: array-stack.cpp  array-stack.h  main.cpp  rootish-array-stack.cpp  rootish-array-stack.h
computer-system/assembler/: Fill.hack  Mult.hack  Sum.asm
computer-system/assembler/adder/: Cargo.toml
computer-system/assembler/ass/: Cargo.toml  poem.txt
computer-system/assembly/: Fill.asm  Mult.asm  README.md
computer-system/compiler/jack-analyzer/: lib.rs
computer-system/compiler/jack_analyzer/: Cargo.toml  main.jack
computer-system/hdl/binary_logic/: DMux.hdl  FullAdder.hdl  Or16.hdl  README.md
computer-system/hdl/computer/: CPU-sample.hdl  CPU.hdl  Computer.hdl  Memory.hdl
computer-system/hdl/sequential_circuit/: Bit.hdl  RAM512.hdl  RAM8.hdl
computer-system/vm/hvm/: Cargo.toml
flutter/bloc_sample/: pubspec.yaml
flutter/bloc_sample/lib/: main.dart
flutter/bloc_sample/test/: widget_test.dart
flutter/provider_sample/: pubspec.yaml
flutter/provider_sample/lib/: main.dart
flutter/riverpod-sample/: pubspec.yaml
flutter/riverpod-sample/lib/: main.dart  todo.dart
flutter/start/: pubspec.yaml
flutter/start/lib/: main.dart
gemini-web/: index.html
hard-ware-simulator/hdl/: ALU.hdl  DMux4Way.hdl  Or16Way.hdl  Xor.hdl
hard-ware-simulator/hdl/And/: And.hdl  And.out  And.tst
hard-ware-simulator/hdl/And16/: And16.hdl  And16.out  And16.tst
hard-ware-simulator/hdl/DMux/: DMux.tst
hard-ware-simulator/hdl/Mux/: Mux.hdl  Mux.out  Mux.tst
hard-ware-simulator/hdl/Mux16/: Mux16.hdl  Mux16.out  Mux16.tst
hard-ware-simulator/hdl/Mux4Way16/: Mux4Way16.hdl  Mux4Way16.out  Mux4Way16.tst
hard-ware-simulator/hdl/Mux8Way16/: Mux8Way16.hdl  Mux8Way16.out  Mux8Way16.tst
hasura/: config.yaml
hasura/metadata/: remote_schemas.yaml  tables.yaml
interpreter-book/monkey/: Cargo.toml  README.md
js/push_test/: index.js  index.mjs  package.json
ocaml/hello/lib/: es.ml
python/hello_rye_ruff/: README.md  pyproject.toml
python/hello_rye_ruff/src/hello_rye_ruff/: __init__.py
rust/actionkv/: Cargo.toml
rust/actionkv/src/: akv_mem.rs  lib.rs
rust/array-queue/: Cargo.toml
rust/async_await/: Cargo.toml
rust/chained-hash-table/: Cargo.toml
rust/clock/: Cargo.toml
rust/clock/src/: main.rs
rust/closures/: Cargo.toml
rust/context_switch/: Cargo.toml  build.rs
rust/croutine/: Cargo.toml
rust/google-calendar/: Cargo.toml
rust/iterators/: Cargo.toml
rust/mandelbrot/: Cargo.toml
rust/particles/: Cargo.toml
rust/rc_ref/: Cargo.toml
rust/sl-list/: Cargo.toml
rust/sqlx-sample/: Cargo.toml
rust/tokio_sample/: Cargo.toml
ts-tree/: README.md  package.json  tsconfig.json
ts-tree/src/: bin.ts  format.ts  index.ts  read.ts
(+213 files in other folders)
