[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc = "3.0.1"
crc32 = "0.0.2"
serde = "1.0.188"
serde_derive = "1.0.188"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "actionkv"
path = "src/akv_mem.rs"
