[package]
name = "clock"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "4.4.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "winreg"] }
kernel32-sys = "0.2.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2.101"